<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <fragment
            android:id="@+id/tabContent"
            android:name="com.phoneshop.fragment.HomeFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
    <RadioGroup 
        android:id="@+id/home_radio_button_group"
        android:layout_width="match_parent"
        android:layout_height="45dp"
       android:orientation="horizontal"
        >
        <RadioButton 
            android:id="@+id/home_main"
            android:drawableTop="@drawable/home_main_buttom_background"
            android:text="@string/home_button_index"
            style="@style/home_radio_button"
            android:checked="true"
            />
        <RadioButton 
            android:id="@+id/home_category"
            android:drawableTop="@drawable/home_category_buttom_background"
            style="@style/home_radio_button"
            android:text="@string/home_button_category"
            />
        <RadioButton 
            android:id="@+id/home_search"
            android:drawableTop="@drawable/home_search_buttom_background"
            style="@style/home_radio_button"
            android:text="@string/home_button_search"
            />
        <RadioButton 
            android:id="@+id/home_personal"
            android:drawableTop="@drawable/home_personal_buttom_background"
            style="@style/home_radio_button"
            android:text="@string/home_button_personal"
            />
    </RadioGroup>
	
</LinearLayout>
