<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="45dp"
        >
	    <TextView
	        android:id="@+id/home_title" 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:gravity="center"
	        android:textColor="@color/white"
	        android:textSize="20sp"
	        android:background="@drawable/title_bg"
	        android:text="@string/home_title"
	        />
	    <Button 
	        android:id="@+id/bt_showPopupWin"
	        android:layout_width="40dp"
	        android:layout_height="match_parent"
	        android:layout_alignParentRight="true"
	        android:gravity="center_vertical"
	        android:background="@drawable/popwin_buttom_background"/>
    </RelativeLayout>
    
     <com.phoneshop.view.Viwepager
        android:layout_width="match_parent"
        android:layout_height="120dp"
        />
    <RadioGroup 
        android:id="@+id/home_radio_button_group"
        android:layout_width="match_parent"
        android:layout_height="35dp"
       android:orientation="horizontal"
        >
        <RadioButton 
            android:id="@+id/index_tab1"
            android:drawableLeft="@drawable/index_tab_1_background"
            style="@style/indexpage_radio_button"
            android:text="@string/index_tab1"
            android:checked="true"
            />
        <RadioButton 
            android:id="@+id/index_tab2"
            android:drawableLeft="@drawable/index_tab_2_background"
            style="@style/indexpage_radio_button"
            android:text="@string/index_tab2"
            />
        <RadioButton 
            android:id="@+id/index_tab3"
            android:drawableLeft="@drawable/index_tab_3_background"
            style="@style/indexpage_radio_button"
            android:text="@string/index_tab3"
            />
        <RadioButton 
            android:id="@+id/index_tab4"
            android:drawableLeft="@drawable/index_tab_4_background"
            style="@style/indexpage_radio_button"
            android:text="@string/index_tab4"
            />
        <RadioButton 
            android:id="@+id/index_tab5"
            android:drawableLeft="@drawable/index_tab_5_background"
            style="@style/indexpage_radio_button"
            android:text="@string/index_tab5"
            />
    </RadioGroup>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
	<ImageView
	        android:id="@+id/iv_bottom_line"
	        android:layout_width="wrap_content"
	        android:layout_height="2dip"	                
	        android:scaleType="matrix"
	        android:src="@drawable/roller" />
    </LinearLayout>
	<android.support.v4.view.ViewPager
	        android:id="@+id/viewPager"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:layout_gravity="center"	        
	        android:background="@color/white"
	        />
</LinearLayout>
